# monkey

./: .clang-format  .clang-tidy  .codespellignore  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md  typos.toml
.github/docker/cappuchin-github-clang/: README.md
.github/docker/cappuchin-github-gcc/: Dockerfile  README.md
.github/docker/cappuchin-github-void-linux-musl-clang/: README.md
.github/docker/monkey-github-builder-clang/: Dockerfile  README.md
.github/docker/monkey-github-builder-void-linux-musl-clang/: Dockerfile  README.md
.github/workflows/: ci.yml  codeql.yml  manual.yml
cmake/: dev-mode.cmake  fmt.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  prelude.cmake  spell-targets.cmake  spell.cmake  variables.cmake
cppcheck/: doctest.cfg  monkey.cfg
examples/: fibonacci-iterative.cp  fibonacci-recursive.cp  fibonacci-recursive.mk  fizzbuzz.cp
source/: array_expression.cpp  array_expression.hpp  ast.cpp  ast.hpp  binary_expression.cpp  binary_expression.hpp  boolean.cpp  boolean.hpp  builtin_function_expression.cpp  builtin_function_expression.hpp  call_expression.cpp  call_expression.hpp  callable_expression.cpp  callable_expression.hpp  chungus.hpp  environment.cpp  environment.hpp  environment_fwd.hpp  expression.cpp  expression.hpp  function_expression.cpp  function_expression.hpp  function_literal.cpp  function_literal.hpp  gc.hpp  hash_literal_expression.cpp  hash_literal_expression.hpp  identifier.cpp  identifier.hpp  if_expression.cpp  if_expression.hpp  index_expression.cpp  index_expression.hpp  integer_literal.cpp  integer_literal.hpp  lexer.cpp  lexer.hpp  lib.cpp  lib.hpp  main.cpp  (+21 more)
source/analyzer/: analyzer.cpp  analyzer.hpp  ast_analyzer.cpp
source/ast/: array_expression.cpp  array_expression.hpp  array_literal.cpp  array_literal.hpp  assign_expression.cpp  assign_expression.hpp  binary_expression.cpp  binary_expression.hpp  boolean.cpp  boolean.hpp  boolean_literal.cpp  boolean_literal.hpp  builtin_function.cpp  builtin_function.hpp  builtin_function_expression.cpp  builtin_function_expression.hpp  call_expression.cpp  call_expression.hpp  callable_expression.cpp  callable_expression.hpp  character_literal.cpp  character_literal.hpp  decimal_literal.cpp  decimal_literal.hpp  expression.hpp  function_expression.cpp  function_expression.hpp  function_literal.cpp  function_literal.hpp  hash_literal.cpp  hash_literal.hpp  hash_literal_expression.cpp  hash_literal_expression.hpp  identifier.cpp  identifier.hpp  if_expression.cpp  if_expression.hpp  index_expression.cpp  index_expression.hpp  integer_literal.cpp  (+13 more)
source/builtin/: builtin.cpp  builtin.hpp
source/code/: code.cpp  code.hpp
source/compiler/: ast_compile.cpp  code.cpp  code.hpp  compiler.cpp  compiler.hpp  symbol_table.cpp  symbol_table.hpp  vm.cpp  vm.hpp
source/eval/: ast_eval.cpp  environment.cpp  environment.hpp  environment_fwd.hpp  evaluator.cpp  evaluator.hpp  object.cpp  object.hpp  util.cpp  util.hpp
source/lexer/: lexer.cpp  lexer.hpp  location.cpp  location.hpp  token.cpp  token.hpp  token_type.cpp  token_type.hpp
source/object/: object.cpp  object.hpp
source/parser/: array_expression.cpp  array_expression.hpp  binary_expression.cpp  binary_expression.hpp  boolean.cpp  boolean.hpp  builtin_function_expression.cpp  builtin_function_expression.hpp  call_expression.cpp  call_expression.hpp  callable_expression.cpp  callable_expression.hpp  environment.cpp  environment_fwd.hpp  expression.hpp  function_expression.cpp  function_expression.hpp  hash_literal_expression.cpp  hash_literal_expression.hpp  identifier.cpp  identifier.hpp  if_expression.cpp  if_expression.hpp  index_expression.cpp  index_expression.hpp  integer_literal.cpp  integer_literal.hpp  object.cpp  object.hpp  parser.cpp  parser.hpp  program.cpp  program.hpp  statements.cpp  statements.hpp  string_literal.cpp  string_literal.hpp  unary_expression.cpp  unary_expression.hpp  util.cpp  (+1 more)
source/vm/: vm.cpp  vm.hpp
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt
test/benchmark/source/: main.cpp
test/doctest/: CMakeLists.txt  dll.cpp  main.cpp
test/lib/doctest/: CMakeLists.txt  main.cpp
test/source/: code_tests.cpp  compiler_tests.cpp  eval_tests.cpp  lexereagen_test.cpp  lexing_tests.cpp  parsing_tests.cpp  symbol_table_tests.cpp  testutils.cpp  testutils.hpp  vm_tests.cpp
